Code/myanalyzer.output
Grammar

    0 $accept: program $end

    1 program: program_decl main_body DOT

    2 program_decl: KW_PROGRAM IDENT SEMICLN

    3 main_body: KW_BEGIN statements KW_END
    4          | body_decl KW_BEGIN statements KW_END
    5          | KW_BEGIN statements KW_END body_decl
    6          | body_decl KW_BEGIN statements KW_END body_decl

    7 body_decl: body_d
    8          | body_decl body_d

    9 body_d: type_decl_section
   10       | var_decl_section
   11       | profunc SEMICLN

   12 statements: %empty
   13           | statement_list

   14 statement_list: statement
   15               | statement_list SEMICLN statement

   16 statement: statement_cont
   17          | if_statement
   18          | while_statement
   19          | for_statement
   20          | repeat_statement
   21          | label_statement
   22          | goto_statement

   23 profunc_call: IDENT L_PARENTH arguments R_PARENTH

   24 if_statement: KW_IF expression KW_THEN statement_cont
   25             | if_statement else_statement

   26 else_statement: KW_ELSE statement_cont
   27               | KW_ELSE KW_IF expression KW_THEN statement_cont

   28 for_statement: KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO statement_cont
   29              | KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO statement_cont

   30 while_statement: KW_WHILE expression KW_DO statement_cont

   31 repeat_statement: KW_REPEAT statement_cont KW_UNTIL expression

   32 label_statement: IDENT CLN statement_cont

   33 goto_statement: KW_GOTO IDENT

   34 statement_cont: KW_RETURN
   35               | KW_RETURN expression
   36               | KW_RESULT ASSIGN expression
   37               | KW_RESULT ASSIGN L_PARENTH var_type R_PARENTH expression
   38               | IDENT ASSIGN expression
   39               | IDENT ASSIGN L_PARENTH var_type R_PARENTH expression
   40               | IDENT table_exp ASSIGN expression
   41               | KW_RESULT OP_PLUS ASSIGN expression
   42               | KW_RESULT OP_MINUS ASSIGN expression
   43               | IDENT OP_PLUS ASSIGN expression
   44               | IDENT OP_MINUS ASSIGN expression
   45               | IDENT table_exp OP_PLUS ASSIGN expression
   46               | IDENT table_exp OP_MINUS ASSIGN expression
   47               | KW_BREAK
   48               | KW_CONTINUE
   49               | profunc_call
   50               | KW_BEGIN statement_list KW_END

   51 arguments: %empty
   52          | arglist
   53          | var_type

   54 arglist: expression
   55        | arglist COMMA expression

   56 expression: POSINT
   57           | REAL
   58           | IDENT
   59           | IDENT table_exp
   60           | KW_RESULT
   61           | profunc_call
   62           | expression EXCL_MARK expression
   63           | expression KW_NOT expression
   64           | L_PARENTH expression R_PARENTH
   65           | expression OP_MULT expression
   66           | expression OP_DIV expression
   67           | expression KW_DIV expression
   68           | expression KW_MOD expression
   69           | OP_PLUS expression
   70           | OP_MINUS expression
   71           | expression OP_PLUS expression
   72           | expression OP_MINUS expression
   73           | expression EQ expression
   74           | expression CMPR_DIFF expression
   75           | expression CMPR_LESS expression
   76           | expression CMPR_LESSEQ expression
   77           | expression CMPR_GRTR expression
   78           | expression CMPR_GRTREQ expression
   79           | expression KW_AND expression
   80           | expression OP_AND expression
   81           | expression KW_OR expression
   82           | expression OP_OR expression
   83           | BOOL_FALSE
   84           | BOOL_TRUE
   85           | STRING

   86 table_exp: L_HOOK expression R_HOOK
   87          | table_exp L_HOOK expression R_HOOK

   88 var_decl_section: KW_VAR var_decl
   89                 | var_decl_section var_decl

   90 var_decl: ident_list CLN var_type SEMICLN
   91         | ident_list CLN var_type_complex SEMICLN
   92         | ident_list CLN KW_ARRAY hooks KW_OF var_type SEMICLN
   93         | ident_list CLN IDENT SEMICLN

   94 var_type: KW_INT
   95         | KW_BOOLEAN
   96         | KW_CHAR
   97         | KW_REAL

   98 var_type_complex: KW_ARRAY KW_OF var_type

   99 hooks: L_HOOK POSINT R_HOOK
  100      | hooks L_HOOK POSINT R_HOOK

  101 type_decl_section: KW_TYPE type_decl SEMICLN
  102                  | type_decl_section type_decl SEMICLN

  103 type_decl: ident_list EQ var_type
  104          | ident_list EQ var_type_complex
  105          | ident_list EQ KW_FUNCTION L_PARENTH profunc_head_var R_PARENTH CLN var_type

  106 ident_list: IDENT
  107           | ident_list COMMA IDENT

  108 profunc: profunc_head_pro SEMICLN
  109        | profunc_head_func SEMICLN
  110        | profunc_head_pro SEMICLN KW_BEGIN statements KW_END
  111        | profunc_head_func SEMICLN KW_BEGIN statements KW_END
  112        | profunc_head_pro SEMICLN body_decl
  113        | profunc_head_func SEMICLN body_decl
  114        | profunc_head_pro SEMICLN body_decl KW_BEGIN statements KW_END
  115        | profunc_head_func SEMICLN body_decl KW_BEGIN statements KW_END

  116 profunc_head_pro: KW_PROCEDURE IDENT L_PARENTH profunc_head_var R_PARENTH

  117 profunc_head_func: KW_FUNCTION IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type
  118                  | KW_FUNCTION IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type_complex

  119 profunc_head_var: %empty
  120                 | profunc_head_var_list

  121 profunc_head_var_list: profunc_head_var_one
  122                      | profunc_head_var_one SEMICLN profunc_head_var_list

  123 profunc_head_var_one: IDENT CLN var_type
  124                     | IDENT CLN var_type_complex
  125                     | IDENT COMMA IDENT CLN var_type
  126                     | IDENT COMMA IDENT CLN var_type_complex
  127                     | IDENT CLN IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENT (258) 2 23 28 29 32 33 38 39 40 43 44 45 46 58 59 93 106 107
    116 117 118 123 124 125 126 127
POSINT (259) 56 99 100
REAL (260) 57
STRING (261) 85
ASSIGN (262) 28 29 36 37 38 39 40 41 42 43 44 45 46
KW_ELSE (263) 26 27
KW_FOR (264) 28 29
KW_FUNCTION (265) 105 117 118
KW_GOTO (266) 33
KW_IF (267) 24 27
KW_NOT (268) 63
KW_VAR (269) 88
KW_OF (270) 92 98
KW_OR (271) 81
KW_WHILE (272) 30
KW_PROCEDURE (273) 116
KW_REPEAT (274) 31
KW_TO (275) 28
KW_RESULT (276) 36 37 41 42 60
KW_RETURN (277) 34 35
KW_THEN (278) 24 27
KW_UNTIL (279) 31
KW_DOWNTO (280) 29
KW_TYPE (281) 101
OP_PLUS (282) 41 43 45 69 71
OP_MINUS (283) 42 44 46 70 72
OP_MULT (284) 65
OP_DIV (285) 66
KW_MOD (286) 68
KW_DIV (287) 67
KW_BREAK (288) 47
KW_CONTINUE (289) 48
KW_INT (290) 94
KW_REAL (291) 97
SEMICLN (292) 2 11 15 90 91 92 93 101 102 108 109 110 111 112 113 114
    115 122
CLN (293) 32 90 91 92 93 105 117 118 123 124 125 126 127
EQ (294) 73 103 104 105
DOT (295) 1
COMMA (296) 55 107 125 126
L_HOOK (297) 86 87 99 100
R_HOOK (298) 86 87 99 100
L_PARENTH (299) 23 37 39 64 105 116 117 118
R_PARENTH (300) 23 37 39 64 105 116 117 118
EXCL_MARK (301) 62
CMPR_LESS (302) 75
CMPR_LESSEQ (303) 76
CMPR_GRTR (304) 77
CMPR_GRTREQ (305) 78
CMPR_DIFF (306) 74
OP_AND (307) 80
OP_OR (308) 82
BOOL_TRUE (309) 84
BOOL_FALSE (310) 83
KW_DO (311) 28 29 30
KW_CHAR (312) 96
KW_PROGRAM (313) 2
KW_BEGIN (314) 3 4 5 6 50 110 111 114 115
KW_END (315) 3 4 5 6 50 110 111 114 115
KW_AND (316) 79
KW_ARRAY (317) 92 98
KW_BOOLEAN (318) 95


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
program_decl (66)
    on left: 2, on right: 1
main_body (67)
    on left: 3 4 5 6, on right: 1
body_decl (68)
    on left: 7 8, on right: 4 5 6 8 112 113 114 115
body_d (69)
    on left: 9 10 11, on right: 7 8
statements (70)
    on left: 12 13, on right: 3 4 5 6 110 111 114 115
statement_list (71)
    on left: 14 15, on right: 13 15 50
statement (72)
    on left: 16 17 18 19 20 21 22, on right: 14 15
profunc_call (73)
    on left: 23, on right: 49 61
if_statement (74)
    on left: 24 25, on right: 17 25
else_statement (75)
    on left: 26 27, on right: 25
for_statement (76)
    on left: 28 29, on right: 19
while_statement (77)
    on left: 30, on right: 18
repeat_statement (78)
    on left: 31, on right: 20
label_statement (79)
    on left: 32, on right: 21
goto_statement (80)
    on left: 33, on right: 22
statement_cont (81)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50, on right:
    16 24 26 27 28 29 30 31 32
arguments (82)
    on left: 51 52 53, on right: 23
arglist (83)
    on left: 54 55, on right: 52 55
expression (84)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83 84 85, on right: 24 27 28 29 30 31
    35 36 37 38 39 40 41 42 43 44 45 46 54 55 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81 82 86 87
table_exp (85)
    on left: 86 87, on right: 40 45 46 59 87
var_decl_section (86)
    on left: 88 89, on right: 10 89
var_decl (87)
    on left: 90 91 92 93, on right: 88 89
var_type (88)
    on left: 94 95 96 97, on right: 37 39 53 90 92 98 103 105 117 123
    125
var_type_complex (89)
    on left: 98, on right: 91 104 118 124 126
hooks (90)
    on left: 99 100, on right: 92 100
type_decl_section (91)
    on left: 101 102, on right: 9 102
type_decl (92)
    on left: 103 104 105, on right: 101 102
ident_list (93)
    on left: 106 107, on right: 90 91 92 93 103 104 105 107
profunc (94)
    on left: 108 109 110 111 112 113 114 115, on right: 11
profunc_head_pro (95)
    on left: 116, on right: 108 110 112 114
profunc_head_func (96)
    on left: 117 118, on right: 109 111 113 115
profunc_head_var (97)
    on left: 119 120, on right: 105 116 117 118
profunc_head_var_list (98)
    on left: 121 122, on right: 120 122
profunc_head_var_one (99)
    on left: 123 124 125 126 127, on right: 121 122


State 0

    0 $accept: . program $end
    1 program: . program_decl main_body DOT
    2 program_decl: . KW_PROGRAM IDENT SEMICLN

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT SEMICLN

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . main_body DOT
    3 main_body: . KW_BEGIN statements KW_END
    4          | . body_decl KW_BEGIN statements KW_END
    5          | . KW_BEGIN statements KW_END body_decl
    6          | . body_decl KW_BEGIN statements KW_END body_decl
    7 body_decl: . body_d
    8          | . body_decl body_d
    9 body_d: . type_decl_section
   10       | . var_decl_section
   11       | . profunc SEMICLN
   88 var_decl_section: . KW_VAR var_decl
   89                 | . var_decl_section var_decl
  101 type_decl_section: . KW_TYPE type_decl SEMICLN
  102                  | . type_decl_section type_decl SEMICLN
  108 profunc: . profunc_head_pro SEMICLN
  109        | . profunc_head_func SEMICLN
  110        | . profunc_head_pro SEMICLN KW_BEGIN statements KW_END
  111        | . profunc_head_func SEMICLN KW_BEGIN statements KW_END
  112        | . profunc_head_pro SEMICLN body_decl
  113        | . profunc_head_func SEMICLN body_decl
  114        | . profunc_head_pro SEMICLN body_decl KW_BEGIN statements KW_END
  115        | . profunc_head_func SEMICLN body_decl KW_BEGIN statements KW_END
  116 profunc_head_pro: . KW_PROCEDURE IDENT L_PARENTH profunc_head_var R_PARENTH
  117 profunc_head_func: . KW_FUNCTION IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type
  118                  | . KW_FUNCTION IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type_complex

    KW_FUNCTION   shift, and go to state 6
    KW_VAR        shift, and go to state 7
    KW_PROCEDURE  shift, and go to state 8
    KW_TYPE       shift, and go to state 9
    KW_BEGIN      shift, and go to state 10

    main_body          go to state 11
    body_decl          go to state 12
    body_d             go to state 13
    var_decl_section   go to state 14
    type_decl_section  go to state 15
    profunc            go to state 16
    profunc_head_pro   go to state 17
    profunc_head_func  go to state 18


State 4

    2 program_decl: KW_PROGRAM IDENT . SEMICLN

    SEMICLN  shift, and go to state 19


State 5

    0 $accept: program $end .

    $default  accept


State 6

  117 profunc_head_func: KW_FUNCTION . IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type
  118                  | KW_FUNCTION . IDENT L_PARENTH profunc_head_var R_PARENTH CLN var_type_complex

    IDENT  shift, and go to state 20


State 7

   88 var_decl_section: KW_VAR . var_decl
   90 var_decl: . ident_list CLN var_type SEMICLN
   91         | . ident_list CLN var_type_complex SEMICLN
   92         | . ident_list CLN KW_ARRAY hooks KW_OF var_type SEMICLN
   93         | . ident_list CLN IDENT SEMICLN
  106 ident_list: . IDENT
  107           | . ident_list COMMA IDENT

    IDENT  shift, and go to state 21

    var_decl    go to state 22
    ident_list  go to state 23


State 8

  116 profunc_head_pro: KW_PROCEDURE . IDENT L_PARENTH profunc_head_var R_PARENTH

    IDENT  shift, and go to state 24


State 9

  101 type_decl_section: KW_TYPE . type_decl SEMICLN
  103 type_decl: . ident_list EQ var_type
  104          | . ident_list EQ var_type_complex
  105          | . ident_list EQ KW_FUNCTION L_PARENTH profunc_head_var R_PARENTH CLN var_type
  106 ident_list: . IDENT
  107           | . ident_list COMMA IDENT

    IDENT  shift, and go to state 21

    type_decl   go to state 25
    ident_list  go to state 26


State 10

    3 main_body: KW_BEGIN . statements KW_END
    5          | KW_BEGIN . statements KW_END body_decl
   12 statements: . %empty  [KW_END]
   13           | . statement_list
   14 statement_list: . statement
   15               | . statement_list SEMICLN statement
   16 statement: . statement_cont
   17          | . if_statement
   18          | . while_statement
   19          | . for_statement
   20          | . repeat_statement
   21          | . label_statement
   22          | . goto_statement
   23 profunc_call: . IDENT L_PARENTH arguments R_PARENTH
   24 if_statement: . KW_IF expression KW_THEN statement_cont
   25             | . if_statement else_statement
   28 for_statement: . KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO statement_cont
   29              | . KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO statement_cont
   30 while_statement: . KW_WHILE expression KW_DO statement_cont
   31 repeat_statement: . KW_REPEAT statement_cont KW_UNTIL expression
   32 label_statement: . IDENT CLN statement_cont
   33 goto_statement: . KW_GOTO IDENT
   34 statement_cont: . KW_RETURN
   35               | . KW_RETURN expression
   36               | . KW_RESULT ASSIGN expression
   37               | . KW_RESULT ASSIGN L_PARENTH var_type R_PARENTH expression
   38               | . IDENT ASSIGN expression
   39               | . IDENT ASSIGN L_PARENTH var_type R_PARENTH expression
   40               | . IDENT table_exp ASSIGN expression
   41               | . KW_RESULT OP_PLUS ASSIGN expression
   42               | . KW_RESULT OP_MINUS ASSIGN expression
   43               | . IDENT OP_PLUS ASSIGN expression
   44               | . IDENT OP_MINUS ASSIGN expression
   45               | . IDENT table_exp OP_PLUS ASSIGN expression
   46               | . IDENT table_exp OP_MINUS ASSIGN expression
   47               | . KW_BREAK
   48               | . KW_CONTINUE
   49               | . profunc_call
   50               | . KW_BEGIN statement_list KW_END

    IDENT        shift, and go to state 27
    KW_FOR       shift, and go to state 28
    KW_GOTO      shift, and go to state 29
    KW_IF        shift, and go to state 30
    KW_WHILE     shift, and go to state 31
    KW_REPEAT    shift, and go to state 32
    KW_RESULT    shift, and go to state 33
    KW_RETURN    shift, and go to state 34
    KW_BREAK     shift, and go to state 35
    KW_CONTINUE  shift, and go to state 36
    KW_BEGIN     shift, and go to state 37

    $default  reduce using rule 12 (statements)

    statements        go to state 38
    statement_list    go to state 39
    statement         go to state 40
    profunc_call      go to state 41
    if_statement      go to state 42
    for_statement     go to state 43
    while_statement   go to state 44
    repeat_statement  go to state 45
    label_statement   go to state 46
    goto_statement    go to state 47
    statement_cont    go to state 48


State 11

    1 program: program_decl main_body . DOT

    DOT  shift, and go to state 49


State 12
